# agreebot

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: main.yml
src/: main.rs  utility.rs
