[package]
name = "agreeboard"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.4"
sqlite = "0.36.2"
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"
reqwest = "0.12.22"
